--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,10 @@
     <title>Dice&Dine Music Player</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="/static/style.css">
-    
+    <link
+  href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+  rel="stylesheet"
+/>
 </head>
 <body> 
     <header class="header">
