--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,7 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+           font-family: 'Poppins';
             background: #f5f5f5;
             min-height: 100vh;
             padding: 20px;
