--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
   href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
   rel="stylesheet"
 />
-    <link rel="icon" type="image/png" href="/static/icon.svg">
+    <link rel="icon" type="image/svg" href="/static/icon.svg">
 </head>
 <body> 
     <header class="header">
